src/objects/Resource_Role__c.object
<CustomObject>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <label>Resource Request</label>
        <referenceTo>ResourceRequest__c</referenceTo>
        <relationshipLabel>Resource Roles</relationshipLabel>
        <relationshipName>Resource_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence for InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Managment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Model Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Scoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Potentially Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Role</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>